test/conformance/chainsaw/mutating-policies/existing/background-scan/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-mpol-background-scan-ns
