test/conformance/chainsaw/mutating-policies/existing/background-scan/configmap-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-mpol-background-scan-cm
  namespace: test-mpol-background-scan-ns
  labels:
    background: scan
